新增功能：将一段文本保存到 .txt 文件中（还在试验）
对 LocalFileStorageDAO # save(String text, String filePath) 简单测试，结果：

循环 1000 次，每次写入 360000 个字符，每个文件 352KB ：0.934 秒
循环 1000 次，每次写入 360000 个字符，每个文件 352KB ：0.696 秒
循环 1000 次，每次写入 360000 个字符，每个文件 352KB ：0.671 秒
循环 1000 次，每次写入 360000 个字符，每个文件 352KB ：0.744 秒

循环 10000 次，每次写入 3600000 个字符，每个文件 3.43MB ：173.579 秒，大约 3 分钟
循环 10000 次，每次写入 3600000 个字符，每个文件 3.43MB ：159.640 秒，大约 2 分半钟

循环 1000 次，每次写入 3600000 个字符，每个文件 3.43MB ：19.469 秒
循环 1000 次，每次写入 3600000 个字符，每个文件 3.43MB ：4.205 秒
循环 1000 次，每次写入 3600000 个字符，每个文件 3.43MB ：6.435 秒
循环 1000 次，每次写入 3600000 个字符，每个文件 3.43MB ：6.812 秒
循环 1000 次，每次写入 3600000 个字符，每个文件 3.43MB ：6.892 秒